tests/invalid/parameter_pack_bare_use_not_allowed.wio
fn Bad<Args...>(args: Args...) -> i32 {
    let copy = args;
    return 0;
}
